--- a/rtl/nativent/Makefile.fpc
+++ b/rtl/nativent/Makefile.fpc
@@ -12,7 +12,7 @@ units=system $(UUCHARUNIT) $(OBJPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) $(CPALLUNI
 implicitunits=ndk ndkutils ddk \
       ctypes $(STRINGSUNIT) \
 #      $(HEAPTRCUNIT)
-#      initc $(CMEMUNIT) dynlibs signals \
+#      initc $(CMEMUNIT) $(DYNLIBSUNIT) signals \
       dos \
       rtlconsts sysconst sysutils $(MATHUNIT) types \
       typinfo $(FGLUNIT) classes \
@@ -48,6 +48,7 @@ COMMON=$(RTL)/common
 PROCINC=$(RTL)/$(CPU_TARGET)
 DDKINC=ddk
 NDKINC=ndk
+# Not used DYNLIBSINCDIR=$(WINDIR)
 
 UNITPREFIX=rtl
 SYSTEMUNIT=system
