--- a/rtl/solaris/Makefile.fpc
+++ b/rtl/solaris/Makefile.fpc
@@ -10,7 +10,7 @@ loaders=
 units=$(SYSTEMUNIT) $(UUCHARUNIT) unixtype ctypes $(STRINGSUNIT) $(OBJPASUNIT) $(ISO7185UNIT) $(EXTPASUNIT) $(MACPASUNIT) \
       $(HEAPTRCUNIT) $(LINEINFOUNIT) $(LNFODWRFUNIT) \
       baseunix unixutil $(UNIXCPUNIT) \
-      termio unix initc $(CMEMUNIT) \
+      $(TERMIOUNIT) unix initc $(CMEMUNIT) \
       sysutils typinfo $(MATHUNIT) $(SORTBASEUNIT) $(FGLUNIT) classes \
       $(CHARSETUNIT) $(CPALLUNIT) $(GETOPTSUNIT) \
       $(ERRORSUNIT) \
@@ -60,6 +60,7 @@ UNITPREFIX=rtl
 CPU_UNITS=
 DYNLIBS_DEPS_OS=$(DLUNIT)$(PPUEXT)
 DYNLIBSINCDIR=$(UNIXINC)
+TERMIO_DEPS_OS=$(UNIXTYPEUNIT)$(PPUEXT)
 
 SYSTEMUNIT=system
 
@@ -186,9 +187,6 @@ endif
 # Other system-dependent RTL Units
 #
 
-termio$(PPUEXT) : termio.pp unixtype$(PPUEXT) baseunix$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
-	$(COMPILER) termio.pp
-
 cthreads$(PPUEXT) : $(UNIXINC)/cthreads.pp sysutils$(PPUEXT) baseunix$(PPUEXT) unixtype$(PPUEXT) unix$(PPUEXT) $(SYSTEMUNIT)$(PPUEXT)
 	$(COMPILER) $(UNIXINC)/cthreads.pp
 
@@ -200,5 +198,5 @@ ctypes$(PPUEXT) :  $(INC)/ctypes.pp $(SYSTEMUNIT)$(PPUEXT) unixtype$(PPUEXT)
 
 initc$(PPUEXT) : $(SYSTEMUNIT)$(PPUEXT)
 
-console$(PPUEXT) : baseunix$(PPUEXT) termio$(PPUEXT)
+console$(PPUEXT) : baseunix$(PPUEXT) $(TERMIOUNIT)$(PPUEXT)
 
